--- a/EcoBazaar/index.html
+++ b/EcoBazaar/index.html
@@ -27,7 +27,8 @@
   <section class="hero">
     <h2>Buy Sustainably. Earn Rewards. Make Impact.</h2>
     <p>EcoBazaar is your one-stop marketplace for eco-friendly products. Earn discounts by cleaning, planting, or donating!</p>
-    <a href="#" class="btn">Explore Products</a>
+    <a class="btn" href="explore.html">Explore</a>
+
   </section>
 
   <!-- 🎞️ Carousel Section -->
