--- a/EcoBazaar/index.html
+++ b/EcoBazaar/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,7 +15,7 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Shop</a></li>
-        <li><a href="#">Rewards</a></li>
+        <li><a href="rewards.html">Rewards</a></li> <!-- ✅ Updated -->
         <li><a href="#">Sell</a></li>
         <li><a href="#">Login</a></li>
       </ul>
@@ -28,7 +27,6 @@
     <h2>Buy Sustainably. Earn Rewards. Make Impact.</h2>
     <p>EcoBazaar is your one-stop marketplace for eco-friendly products. Earn discounts by cleaning, planting, or donating!</p>
     <a class="btn" href="explore.html">Explore</a>
-
   </section>
 
   <!-- 🎞️ Carousel Section -->
