--- a/EcoBazaar/explore.html
+++ b/EcoBazaar/explore.html
@@ -18,6 +18,27 @@
       color: #2d572c;
     }
 
+    /* 🔽 NEW: Top bar style */
+    .top-bar {
+      display: flex;
+      justify-content: flex-end;
+      padding: 10px 20px;
+    }
+
+    .top-bar a {
+      font-size: 18px;
+      text-decoration: none;
+      color: #2d572c;
+      background-color: white;
+      padding: 6px 12px;
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .top-bar a:hover {
+      background-color: #e2e6e3;
+    }
+
     .product-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -70,6 +91,11 @@
   </style>
 </head>
 <body>
+
+  <!-- 🔽 NEW: Cart button -->
+  <div class="top-bar">
+    <a href="cart.html">🛒 Cart</a>
+  </div>
 
   <h1>Explore Sustainable Products</h1>
 
