--- a/EcoBazaar/explore.html
+++ b/EcoBazaar/explore.html
@@ -95,6 +95,7 @@
   <!-- 🔽 NEW: Cart button -->
   <div class="top-bar">
     <a href="cart.html">🛒 Cart</a>
+      <a href="orders.html">📦 Orders</a>
   </div>
 
   <h1>Explore Sustainable Products</h1>
@@ -104,5 +105,6 @@
   </div>
 
   <script src="scripts/explore.js"></script>
+  
 </body>
 </html>
