--- a/EcoBazaar/index.html
+++ b/EcoBazaar/index.html
@@ -79,7 +79,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Shop</a></li>
         <li><a href="rewards.html">Rewards</a></li> <!-- ✅ Updated -->
-        <li><a href="#">Sell</a></li>
+        <li><a href="sell.html" id="sell-link">Sell</a></li>
         <a href="login.html"><button>Login</button></a>
 
       </ul>
